# annodue

./: .gitignore  CHANGELOG.md  LICENSE  MANUAL.md  README.md  build.zig  build.zig.zon  zig-clean.bat
annodue/: settings.ini
assets/: settings.ini
assets/images/: corner_round_32.tga  triangle_48x64.tga
assets/textures/: LICENSE
src/: main.zig
src/collision_viewer/: CMakeLists.txt  annodue_interface.h  collision_viewer.h  globals.h  main.cpp  types.h
src/collision_viewer/imgui-d3d3/backends/: imgui_impl_d3d.cpp
src/dinput/: CMakeLists.txt  README.md  console.c  dinput.c  loading.c  memory.c
src/patch/: appinfo.zig  debug.zig  dll_cam7.zig  dll_collision_viewer.zig  dll_cosmetic.zig  dll_developer.zig  dll_gameplaytweak.zig  dll_inputdisplay.zig  dll_multiplayer.zig  dll_overlay.zig  dll_qol.zig  dll_savestate.zig  dll_test.zig  dll_toast.zig  global.zig  hook.zig  main.zig  patch.zig  patch_general.zig  patch_multiplayer.zig  patch_practice.zig  patch_savestate.zig  settings.zig
src/patch/core/: ASettings.zig  Allocator.zig  Debug.zig  Freeze.zig  GDraw.zig  GFreeze.zig  GHideRaceUI.zig  Global.zig  Hook.zig  Input.zig  Practice.zig  RTerrain.zig  RTrigger.zig  Settings.zig  SharedDef.zig  Toast.zig  core.zig  (+2 more)
src/racer/: Camera.zig  File.zig  Global.zig  Input.zig  Matrix.zig  Model.zig  Quad.zig  RaceData.zig  Random.zig  Sound.zig  Stats.zig  Text.zig  Time.zig  Track.zig  Vector.zig  Vehicle.zig  Video.zig  racer.zig  racer_const.zig  racer_fn.zig
src/tools/: generate_release_zip_files.zig  generate_safe_plugin_hash_file.zig  hotcopy_move_files.zig
(+40 files in other folders)
